# boggle

./: 6x6.txt  CMakeLists.txt  README.md
cmake/: gtest.cmake
src/: main.cpp
src/boggle/: BoggleSolver.cpp  BoggleSolver.h  Trie.cpp  Trie.h  TrieTraverser.cpp  TrieTraverser.h
test/: BoggleSolverTest.hpp  TrieTest.hpp  TrieTraverserTest.hpp  main.cpp
